# python_template

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  setup.cfg
template_project/: __init__.py  __main__.py
template_project/tests/: __init__.py  test_main.py
