[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "template_project"
version = "0.1"
description = "Template description."
authors = ["TEMPLATE AUTHOR <template_author@template_domain.example.com>"]
license = "TEMPLATE_LICENSE"
readme = "README.md"
repository = "https://template_domain.example.com"
packages = [
    { include = "template_project" }
]
include = ["template_project/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.master]
jobs = 0

[tool.pylint.format]
max-line-length = 79

[tool.pylint.messages_control]
reports = "no"
disable = [
    "import-error",
]
