[metadata]
name = template_project
version = 1.0
url = https://github.com/author/template_project
author = "Author Name"
author_email = author@example.com
description = "Example project."
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    Environment :: Other Environment
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Text Processing
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.9
package_dir = template_project=template_project
packages = find:

[options.package_data]
template_project = py.typed

[options.extras_require]
test =
    pytest
    black
